# nexus

./: .env.example  .gitignore  Anchor.toml  BUTTON_FIXES_SUMMARY.md  CREATEOS_BUILD_FAILURE_FIX.md  CREATEOS_DEPLOYMENT.md  DEMO_ELEVATOR_PITCH.md  DEMO_GUIDE.md  DEMO_QUICK_REFERENCE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_BLOCKER_ANALYSIS.md  DEPLOYMENT_STATUS.md  DEVNET_DEPLOYMENT_COMPLETE.md  DEVNET_DEPLOYMENT_GUIDE.md  GIT_PUSH_ISSUE_RESOLVED.md  NODEOPS_DEPLOYMENT.md  OPENCODE_INTEGRATION.md  PHASE_0_COMPLETE.md  PHASE_6_STATUS_REPORT.md  PHASE_6_SUMMARY.txt  QUICK_DEPLOY.md  QUICK_START.md  README.md  SECURITY_VERIFICATION.txt  SEEDS.md  SESSION_SUMMARY.md  START_DEMO_NOW.md  TECHNICAL_SPECIFICATION.md  USER_GUIDE.md  deploy.js  opencode.json.template  package-lock.json  package.json  render.yaml  tsconfig.json  txtx.yml  verify-deployment.sh
app/: .env.example  README.md  index.html  package-lock.json  package.json
app/public/zk/: kyc_verification.wasm  verification_key.json
app/src/: App.tsx  constants.ts  index.css  main.tsx  types.ts  vite-env.d.ts
app/src/components/: Dashboard.css  Dashboard.tsx  DataNotification.tsx  DemoRunner.tsx  TestConsole.tsx  Walkthrough.tsx
app/src/context/: AuthContext.tsx  NexusContext.tsx
app/src/hooks/: useNexus.ts
app/src/layouts/: AppLayout.tsx
app/src/pages/: BankDashboard.tsx  CompanyDashboard.tsx  HomePage.tsx  LandingPage.tsx  LoginPage.tsx
app/src/services/: demoClient.ts  nexusService.ts  solanaClient.ts  zkService.ts
circuits/: kyc_verification.circom
docs/: ARCHITECTURE.md  DEVNET_DEPLOYMENT.md  ON_CHAIN_VERIFICATION.md  PHASE_6_SIX_ORACLE_COMPLETE.md  PHASE_6_SIX_ORACLE_SETUP.md  QUICKSTART.md  SECURITY_SECRETS_MANAGEMENT.md  SIX_INTEGRATION.md  TENITY_SETUP.md
docs/architecture/: ENTITY_REGISTRY_HELPERS.md  EXPLAINED_SIMPLE.md  REVIEW_SUMMARY.md
docs/phases/: PHASE_2B_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md
migrations/: seed-devnet.ts
programs/compliance-hook/: Cargo.toml
programs/compliance-hook/src/: errors.rs  lib.rs  state.rs
programs/compliance-hook/src/instructions/: mod.rs  transfer_hook.rs
programs/compliance-hook/tests/: compliance_hook.rs
programs/entity-registry/: Cargo.toml
programs/entity-registry/src/: errors.rs  lib.rs  state.rs
programs/entity-registry/src/instructions/: mod.rs  register_entity.rs  rotate_compliance_officer.rs  suspend_entity.rs  update_mandate_limits.rs  verify_entity.rs
programs/entity-registry/tests/: entity_registry.rs
programs/fx-netting/: Cargo.toml  Xargo.toml
programs/fx-netting/src/: errors.rs  lib.rs  state.rs
programs/fx-netting/src/instructions/: cross_currency_offset.rs  mod.rs  set_fx_rate.rs
programs/fx-netting/tests/: fx_netting.rs
programs/pooling-engine/: Cargo.toml
programs/pooling-engine/src/: errors.rs  lib.rs  netting_algorithm.rs  state.rs
programs/pooling-engine/src/instructions/: add_entity_to_pool.rs  create_pool.rs  init_oracle.rs  mod.rs  run_netting_cycle.rs  update_six_oracle.rs
programs/pooling-engine/tests/: cpi_integration.rs  netting_algorithm.rs
programs/sweep-trigger/: Cargo.toml
programs/sweep-trigger/src/: errors.rs  lib.rs  state.rs
programs/sweep-trigger/src/instructions/: detect_sweep_trigger.rs  execute_sweep.rs  init_sweep_config.rs  mod.rs  repay_loan.rs
programs/sweep-trigger/tests/: sweep_trigger.rs
runbooks/: README.md
runbooks/deployment/: main.tx  signers.devnet.tx
scripts/: compile-circuit.sh  demo-script.md  six_oracle_feeder.mjs
services/six-oracle/: .env.example  IMPLEMENTATION.md  README.md  oracle.py  package.json  requirements.txt
tests/: nexus.ts
(+21 files in other folders)
