[package]
name = "entity-registry"
version = "0.1.0"
description = "NEXUS Entity Registry - Layer 1 - KYC DESCRIPTION Vaults"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "entity_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
constant_time_eq = "=0.3.0"
