[package]
name = "pooling-engine"
version = "0.1.0"
description = "NEXUS Notional Pooling Engine - Layer 2 - Core Netting Algorithm"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pooling_engine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
