[package]
name = "pooling-engine"
version = "0.1.0"
description = "NEXUS Notional Pooling Engine - Layer 2 - Core Netting Algorithm"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pooling_engine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
constant_time_eq = "=0.3.0"
entity-registry = { path = "../entity-registry", features = ["cpi"] }
compliance-hook = { path = "../compliance-hook", features = ["cpi"] }
fx-netting = { path = "../fx-netting", features = ["cpi"] }
sweep-trigger = { path = "../sweep-trigger", features = ["cpi"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
overflow-checks = false
