[package]
name = "sweep-trigger"
version = "0.1.0"
description = "NEXUS Sweep Trigger - Layer 5 - Physical Liquidity Moves"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sweep_trigger"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
